# langgraph-deepforge

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  pyproject.toml
css/: style.css
docs/: setup-guide.md
examples/: hello_graph.py
js/: app.js  i18n-data.js  i18n.js  pomodoro.js  store.js
lessons/: L01-state-nodes-edges.html  L02-first-llm-agent.html  L03-tools.html  L04-agent-loop.html  L05-memory-persistence.html  L06-human-in-the-loop.html  L07-streaming.html  L08-error-handling.html  L09-subgraphs.html  L10-multi-agent.html  L11-parallel-send.html  L12-production.html
reference/: answer-bank.html  fables.html  interview-bank.html  learning-path.html  meta-learning-guide.html  pitfalls.html
tools/: translate_answer_bank.py  translate_i18n_content.py
