[project]
name = "learning-langgraph"
version = "0.1.0"
description = "A hands-on LangGraph learning forge for building production-grade agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.2",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
]
